--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -7,4 +7,4 @@
 
 %h2 Events
 %ul
-  %li{"ng-repeat" => "event in events"} {{ event.name }}
+  %li{"ng-repeat" => "event in events"} {{ event.start_time|date:"d-M-yyyy" }} - {{ event.name }}
