Improve variable/function names

--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,2 +1,2 @@
-%button{"type" => "button", "ng-show" => "!logged_in", "ng-disabled" => "!facebookReady", "ng-click" => "IntentLogin()"} Login with Facebook
+%button{"type" => "button", "ng-show" => "!logged_in", "ng-disabled" => "!facebookReady", "ng-click" => "startLogin()"} Login with Facebook
 %button{"type" => "button", "ng-show" => "logged_in", "ng-disabled" => "!facebookReady", "ng-click" => "logout()"} Logout
