--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -695,7 +695,7 @@ $include-html-global-classes: $include-html-classes;
 // $icon-bar-image-width: 1.875rem;
 // $icon-bar-image-height: 1.875rem;
 // $icon-bar-active-color: $primary-color;
-// $icon-bar-item-padding: 1.25rem;
+$icon-bar-item-padding: 0.25rem;
 
 // 13. Inline Lists
 // - - - - - - - - - - - - - - - - - - - - - - - - -
