--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -10,7 +10,12 @@
   .large-12.columns
     %h2 Events - {{ user.name }}
 
-.row
-  .large-12.columns
-    %ul
-      %li{"ng-repeat" => "event in events"} {{ event.start_time|date:"d-M-yyyy" }} - {{ event.name }}
+.row{"ng-repeat" => "event in events"}
+  .large-3.columns
+    %img{"ng-src" => "{{ event.picture.source }}"}
+  .large-9.columns
+    %h3 {{ event.name }}
+    -# TODO: relative time
+    %p ({{ event.start_time|date:"d MMMM" }})
+    %p {{ event.location }}
+    -#%p {{ event.rsvp_status }}
