Extract nav to partial

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,10 +1,4 @@
-.icon-bar.six-up.label-right
-  %a.item{"href" => "#/events"}
-    %i.fi-calendar
-    %label Events
-  %a.item.right{"ng-click" => "logout()"}
-    %i.fi-unlock
-    %label Log out
+= render 'layouts/nav'
 
 .row
   .large-12.columns
