--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -4,15 +4,22 @@
     %h1 Prosocial
   .large-3.columns &nbsp;
 
-.row.callout
+.row.tagline
   .large-3.columns &nbsp;
   .large-6.columns.text-center
-    %em adj.
-    relating to or denoting behaviour which is positive, helpful, and intended to promote social acceptance and friendship
+    %h4 Manage your social life without distraction
   .large-3.columns &nbsp;
 
 .row.login
   .large-3.columns &nbsp;
   .large-6.columns.text-center
     %button{"type" => "button", "ng-show" => "!logged_in", "ng-disabled" => "!facebookReady", "ng-click" => "startLogin()"} Login with Facebook
+  .large-3.columns &nbsp;
+
+.row.defn
+  .large-3.columns &nbsp;
+  .large-6.columns.text-center
+    %strong Prosocial
+    %em adj.
+    relating to or denoting behaviour which is positive, helpful, and intended to promote social acceptance and friendship
   .large-3.columns &nbsp;
