Remove unneeded db reconnect, eval bashrc for environment vars

--- a/provision/roles/webserver/templates/etc_init_puma.j2
+++ b/provision/roles/webserver/templates/etc_init_puma.j2
@@ -30,6 +30,7 @@ respawn limit 3 30
 instance {{deploy_directory}}/current
 
 script
+. /home/{{ app_name }}/.bashrc
 cd {{deploy_directory}}/current
 logger -t puma "Starting server: $app"
 exec bundle exec puma -C {{deploy_directory}}/current/config/puma/production.rb
